<resources>
    <string name="app_name">TradeU</string>
    <string name="login_info">Welcome to TradeU</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Halo %1$s</string>
    <string name="welcome">Selamat Datang</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="rp500_000_00">Rp500.000,00</string>
    <string name="hint_search_view">Cari Baju…</string>
    <string name="hint_search_view_favorite">Cari Favorite…</string>
    <string name="trending_now">Trending Now</string>
    <string name="all">All</string>
    <string name="new_info">New</string>
    <string name="kaos_hitam">Kaos Hitam</string>
    <string name="rp45_000">Rp45.000</string>
    <string name="favorite">Favorite</string>
    <string name="pasar_baru_padang">Pasar Baru, Padang</string>
    <string name="buy">Buy</string>
    <string name="upload">Upload</string>
    <string name="publish">Publish</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="description">Deskripsi</string>
    <string name="harga">Harga</string>
    <string name="stok_produk">Jumlah Stok Produk</string>
    <string name="upload_foto_produk">Upload Foto Produk</string>
    <string name="fajar_alif_riyandi">Fajar Alif Riyandi</string>
    <string name="profile_info">Profile Info</string>
    <string name="my_post">My Post</string>
    <string name="my_wallet">My Wallet</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="logout">Logout</string>
    <string name="product_detail">Product Detail</string>
    <string name="kaos_hijau">Kaos Hijau</string>
    <string name="stock_info">Stock : %1$s</string>
    <string name="m">M</string>
    <string name="padang">Padang</string>
    <string name="s">S</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="deskripsi">Deskripsi :</string>
    <string name="contoh_deskripsi">Kaos hitam dengan bahan combed 24s tersedia dengan berbagai ukuran dan nyaman dipakai</string>
    <string name="buy_it_now">BUY IT NOW</string>
    <string name="transaction">Transaction</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="_62_812_3456_7890">+62–812-3456-7890</string>
    <string name="rp500_000">Rp500.000</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="rp30_000">Rp30.000</string>
    <string name="total">Total</string>
    <string name="rp75_000">Rp75.000</string>
    <string name="place_order">Place Order</string>
    <string name="payment_success">Payment Success</string>
    <string name="no_transaction">No.Transaction</string>
    <string name="a_001">A-001</string>
    <string name="payment_method">Payment Method</string>
    <string name="wallet">Wallet</string>
    <string name="product_name">Product Name</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="_13_juni_2023">13 June 2023</string>
    <string name="sender">Sender</string>
    <string name="back_home">Back Home</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="list_favorite">List Favorite</string>
    <string name="username_password_empty">Tolong Lengkapi Username dan Password !</string>
    <string name="username_password_wrong">Username atau password salah</string>
    <string name="logout_success">Berhasil Logout</string>
    <string name="sorry_theres_some_mistake">Maaf ada kesalahan..</string>
    <string name="balance_count">Rp%1$s,00</string>
    <string name="item_not_found">Maaf, barang tidak ditemukan..</string>
    <string name="choose_a_picture">Choose A Picture</string>
    <string name="choose_method">Choose A Method</string>
    <string name="publish_success">Barang Berhasil di publish!</string>
    <string name="you_are_reviewing_your_own_sell_item">You are reviewing your own sell item</string>
    <string name="please_choose_item_size">Choose item size before proceed any further</string>
    <string name="rp10_000">10.000</string>
    <string name="quantity">Quantity</string>
    <string name="_20">20</string>
    <string name="ex_20">ex: 20</string>
    <string name="fill_the_form">Please fill the form !</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="size">Size</string>
    <string name="out_of_sale">Sorry, this item is currently out of sale</string>
    <string name="balance">Balance</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="ex_628123">ex: +628123</string>
    <string name="register">Register To TradeU</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="regis">Register</string>
    <string name="fullname">Fullname</string>
    <string name="not_available">Username and Password is Not Available</string>
    <string name="login_success">Login Berhasil</string>

    <string-array name="intent_photo">
        <item>Galeri</item>
        <item>Kamera</item>
    </string-array>

</resources>