<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    android:paddingTop="32dp"
    tools:context=".ui.transaction.TransactionActivity">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow"
        android:layout_marginStart="2dp"
        android:padding="13dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_info"
        app:layout_constraintEnd_toEndOf="@id/tv_info"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/tv_info"
        style="@style/MyTextView.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:textSize="24sp"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ib_back"
        app:layout_constraintBottom_toBottomOf="@id/ib_back"/>

    <TextView
        android:id="@+id/tv_info_name"
        style="@style/MyTextView.Bold.Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="21sp"
        android:paddingHorizontal="18dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintStart_toStartOf="@id/tv_info"
        app:layout_constraintEnd_toEndOf="@id/tv_info"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_buyer_name"
        style="@style/TransactionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="-6dp"
        android:hint="@string/fajar_alif_riyandi"
        app:layout_constraintTop_toBottomOf="@id/tv_info_name"
        app:layout_constraintStart_toStartOf="@id/tv_info_name"
        app:layout_constraintEnd_toEndOf="@id/tv_info_name"/>

    <TextView
        android:id="@+id/tv_info_address"
        style="@style/MyTextView.Bold.Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="21sp"
        android:paddingHorizontal="18dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_buyer_name"
        app:layout_constraintStart_toStartOf="@id/et_buyer_name"
        app:layout_constraintEnd_toEndOf="@id/et_buyer_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_buyer_address"
        style="@style/TransactionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="-6dp"
        android:hint="@string/padang"
        app:layout_constraintTop_toBottomOf="@id/tv_info_address"
        app:layout_constraintStart_toStartOf="@id/tv_info_address"
        app:layout_constraintEnd_toEndOf="@id/tv_info_address"/>


    <TextView
        android:id="@+id/tv_info_contact"
        style="@style/MyTextView.Bold.Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="21sp"
        android:paddingHorizontal="18dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_buyer_address"
        app:layout_constraintStart_toStartOf="@id/et_buyer_address"
        app:layout_constraintEnd_toEndOf="@id/et_buyer_address"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_buyer_contact"
        style="@style/TransactionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="-6dp"
        android:hint="@string/_62_812_3456_7890"
        app:layout_constraintTop_toBottomOf="@id/tv_info_contact"
        app:layout_constraintStart_toStartOf="@id/tv_info_contact"
        app:layout_constraintEnd_toEndOf="@id/tv_info_contact"/>

    <TextView
        android:id="@+id/tv_info_wallet"
        style="@style/MyTextView.Bold.Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_wallet"
        android:textSize="21sp"
        android:paddingHorizontal="18dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_buyer_contact"
        app:layout_constraintStart_toStartOf="@id/et_buyer_contact"
        app:layout_constraintEnd_toEndOf="@id/et_buyer_contact"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_buyer_wallet"
        style="@style/TransactionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="-6dp"
        android:hint="@string/rp500_000"
        app:layout_constraintTop_toBottomOf="@id/tv_info_wallet"
        app:layout_constraintStart_toStartOf="@id/tv_info_wallet"
        app:layout_constraintEnd_toEndOf="@id/tv_info_wallet"/>
    
    
    <TextView
        android:id="@+id/tv_info_subtotal"
        style="@style/MyTextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:textSize="17sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_buyer_wallet"
        app:layout_constraintStart_toStartOf="@id/et_buyer_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/tv_subtotal"
        style="@style/MyTextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/rp45_000"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_info_subtotal"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_subtotal"/>

    <TextView
        android:id="@+id/tv_info_delivery_fee"
        style="@style/MyTextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_fee"
        android:textSize="17sp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_subtotal"
        app:layout_constraintStart_toStartOf="@id/tv_info_subtotal" />

    <TextView
        android:id="@+id/tv_delivery_fee"
        style="@style/MyTextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/rp30_000"
        app:layout_constraintEnd_toEndOf="@id/tv_subtotal"
        app:layout_constraintTop_toTopOf="@id/tv_info_delivery_fee"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_delivery_fee"/>

    <TextView
        android:id="@+id/tv_info_total"
        style="@style/MyTextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="17sp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_delivery_fee"
        app:layout_constraintStart_toStartOf="@id/tv_info_delivery_fee" />

    <TextView
        android:id="@+id/tv_total"
        style="@style/MyTextView.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/rp75_000"
        app:layout_constraintEnd_toEndOf="@id/tv_delivery_fee"
        app:layout_constraintTop_toTopOf="@id/tv_info_total"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_total"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_order"
        style="@style/MyButtonV2.rad10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>