<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TransactionSuccessActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo_transaction_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/ic_transaction_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/tv_info"
        style="@style/MyTextView.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/payment_success"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_transaction_success" />

    <TextView
        android:id="@+id/tv_total_price"
        style="@style/MyTextView.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/rp75_000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_total_price" />


    <TextView
        android:id="@+id/tv_info_no_transaction"
        style="@style/MyTextView.Regular.TextViewInfoPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_transaction"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/tv_no_transaction"
        style="@style/MyTextView.Medium.TextViewPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/a_001"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_no_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_info_no_transaction"/>

    <TextView
        android:id="@+id/tv_info_payment_method"
        style="@style/MyTextView.Regular.TextViewInfoPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_no_transaction"
        app:layout_constraintStart_toStartOf="@id/tv_info_no_transaction"
        app:layout_constraintEnd_toEndOf="@id/tv_info_no_transaction"/>

    <TextView
        android:id="@+id/tv_payment_method"
        style="@style/MyTextView.Medium.TextViewPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        app:layout_constraintTop_toTopOf="@id/tv_info_payment_method"
        app:layout_constraintEnd_toEndOf="@id/tv_no_transaction"
        app:layout_constraintStart_toStartOf="@id/tv_no_transaction"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_payment_method"/>

    <TextView
        android:id="@+id/tv_info_product_name"
        style="@style/MyTextView.Regular.TextViewInfoPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_payment_method"
        app:layout_constraintStart_toStartOf="@id/tv_info_payment_method"
        app:layout_constraintEnd_toEndOf="@id/tv_info_payment_method"/>

    <TextView
        android:id="@+id/tv_product_name"
        style="@style/MyTextView.Medium.TextViewPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kaos_hijau"
        app:layout_constraintTop_toTopOf="@id/tv_info_product_name"
        app:layout_constraintEnd_toEndOf="@id/tv_payment_method"
        app:layout_constraintStart_toStartOf="@id/tv_payment_method"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_product_name"/>

    <TextView
        android:id="@+id/tv_info_date_time"
        style="@style/MyTextView.Regular.TextViewInfoPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_product_name"
        app:layout_constraintStart_toStartOf="@id/tv_info_product_name"
        app:layout_constraintEnd_toEndOf="@id/tv_info_product_name"/>

    <TextView
        android:id="@+id/tv_date_time"
        style="@style/MyTextView.Medium.TextViewPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_13_juni_2023"
        app:layout_constraintTop_toTopOf="@id/tv_info_date_time"
        app:layout_constraintEnd_toEndOf="@id/tv_product_name"
        app:layout_constraintStart_toStartOf="@id/tv_product_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_date_time"/>

    <TextView
        android:id="@+id/tv_info_sender"
        style="@style/MyTextView.Regular.TextViewInfoPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sender"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_date_time"
        app:layout_constraintStart_toStartOf="@id/tv_info_date_time"
        app:layout_constraintEnd_toEndOf="@id/tv_info_date_time"/>

    <TextView
        android:id="@+id/tv_sender"
        style="@style/MyTextView.Medium.TextViewPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fajar_alif_riyandi"
        app:layout_constraintTop_toTopOf="@id/tv_info_sender"
        app:layout_constraintEnd_toEndOf="@id/tv_date_time"
        app:layout_constraintStart_toStartOf="@id/tv_date_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_info_sender"/>
    

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_home"
        style="@style/MyButtonV2.rad15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_home"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.9775"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_transaction"
        style="@style/MyButtonV2.rad15.SaveTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_transaction"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="6dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/btn_back_home"
        app:layout_constraintStart_toStartOf="@id/btn_back_home"
        app:layout_constraintEnd_toEndOf="@id/btn_back_home"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>


</androidx.constraintlayout.widget.ConstraintLayout>