<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productdetail.ProductDetailActivity"
    android:paddingBottom="16dp"
    android:paddingTop="32dp"
    android:paddingHorizontal="28dp">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow"
        android:layout_marginStart="2dp"
        android:padding="13dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"/>
    
    <TextView
        android:id="@+id/tv_info"
        style="@style/MyTextView.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_detail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ib_back"
        app:layout_constraintBottom_toBottomOf="@id/ib_back"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:scaleType="fitCenter"
        android:padding="1dp"
        android:src="@drawable/barang"
        android:background="@drawable/iv_item_sell_bg"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintStart_toStartOf="@id/tv_info"
        app:layout_constraintEnd_toEndOf="@id/tv_info"
        />

    <TextView
        android:id="@+id/tv_item_name"
        style="@style/MyTextView.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="28dp"
        android:textSize="29sp"
        android:text="@string/kaos_hijau"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_item_photo"
        app:layout_constraintStart_toStartOf="@id/tv_info"
        app:layout_constraintEnd_toStartOf="@id/ib_favorite"/>

    <TextView
        android:id="@+id/tv_item_price"
        style="@style/MyTextView.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/rp45_000"
        android:textColor="@color/grey_800"
        android:textSize="19sp"
        android:layout_marginTop="-7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"/>
    
    <TextView
        android:id="@+id/tv_item_stock"
        style="@style/MyTextView.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stock_info"
        android:textAlignment="textStart"
        android:textSize="19sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_price"
        app:layout_constraintStart_toStartOf="@id/tv_item_price"
        app:layout_constraintEnd_toStartOf="@id/tv_location"/>
    
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_favorite_selector_big"
        app:layout_constraintEnd_toEndOf="@id/tv_info"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_name"/>

    <TextView
        android:id="@+id/tv_location"
        style="@style/MyTextView.Regular"
        android:text="@string/padang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_item_stock"
        app:layout_constraintEnd_toEndOf="@id/tv_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_stock"/>

    <LinearLayout
        android:id="@+id/ll_container_item_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:divider="@drawable/item_size_option_divider"
        android:showDividers="middle"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_item_stock"
        app:layout_constraintStart_toStartOf="@id/tv_item_stock"
        app:layout_constraintEnd_toEndOf="@id/tv_location">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_item_size_s"
            style="@style/MyButton.ItemSizeOption"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/s" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_item_size_m"
            style="@style/MyButton.ItemSizeOption"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/m" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_item_size_l"
            style="@style/MyButton.ItemSizeOption"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/l"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_item_size_xl"
            style="@style/MyButton.ItemSizeOption"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/xl"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_info_description"
        style="@style/MyTextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/ll_container_item_option"
        app:layout_constraintStart_toStartOf="@id/ll_container_item_option"/>

    <TextView
        android:id="@+id/tv_description"
        style="@style/MyTextView.Regular"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:minLines="3"
        android:textSize="13.5sp"
        android:text="@string/contoh_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_description_detail_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_info_description"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy"
        style="@style/MyButtonV2.rad10"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:paddingHorizontal="34dp"
        android:text="@string/buy_it_now"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="@id/tv_description"/>



</androidx.constraintlayout.widget.ConstraintLayout>